--- a/src/Workbooster.ObjectDbMapper/Workbooster.ObjectDbMapper.csproj
+++ b/src/Workbooster.ObjectDbMapper/Workbooster.ObjectDbMapper.csproj
@@ -42,9 +42,15 @@
   <ItemGroup>
     <Compile Include="Attributes\ColumnAttribute.cs" />
     <Compile Include="Extensions\ConnectionExcetions.cs" />
-    <Compile Include="Extensions\DataReaderExtensions.cs" />
+    <Compile Include="Filters\FilterComparison.cs" />
+    <Compile Include="Filters\FilterComparisonOperatorEnum.cs" />
+    <Compile Include="Filters\FilterGroup.cs" />
+    <Compile Include="Filters\FilterGroupOperatorEnum.cs" />
+    <Compile Include="Filters\IFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
