--- a/src/Workbooster.ObjectDbMapper/Workbooster.ObjectDbMapper.csproj
+++ b/src/Workbooster.ObjectDbMapper/Workbooster.ObjectDbMapper.csproj
@@ -35,17 +35,19 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\ColumnAttribute.cs" />
+    <Compile Include="Attributes\TableAttribute.cs" />
+    <Compile Include="Commands\InsertCommand.cs" />
     <Compile Include="Extensions\ConnectionExcetions.cs" />
     <Compile Include="Filters\FilterComparison.cs" />
     <Compile Include="Filters\FilterComparisonOperatorEnum.cs" />
     <Compile Include="Filters\FilterGroup.cs" />
     <Compile Include="Filters\FilterGroupOperatorEnum.cs" />
+    <Compile Include="Filters\FilterUtilities.cs" />
     <Compile Include="Filters\IFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query.cs" />
