--- a/src/Workbooster.ObjectDbMapper.Test/Workbooster.ObjectDbMapper.Test.csproj
+++ b/src/Workbooster.ObjectDbMapper.Test/Workbooster.ObjectDbMapper.Test.csproj
@@ -60,6 +60,8 @@
   <ItemGroup>
     <Compile Include="Commands\InsertCommand_Test\Inserting_With_Dynamic_Field_Mappings_Works.cs" />
     <Compile Include="Commands\InsertCommand_Test\Inserting_With_Nondynamic_Field_Mappings_Works.cs" />
+    <Compile Include="Commands\UpdateCommand_Test\Updating_With_Dynamic_Field_Mappings_Works.cs" />
+    <Compile Include="Commands\UpdateCommand_Test\Updating_With_Nondynamic_Field_Mappings_Works.cs" />
     <Compile Include="Query_Test\Filters_Works.cs" />
     <Compile Include="Query_Test\Reading_To_Fields_With_Column_Attributes_Works.cs" />
     <Compile Include="Query_Test\Reading_To_Fields_Works.cs" />
