--- a/src/Workbooster.ObjectDbMapper/Workbooster.ObjectDbMapper.csproj
+++ b/src/Workbooster.ObjectDbMapper/Workbooster.ObjectDbMapper.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Commands\InsertCommand.cs" />
     <Compile Include="Commands\MappingCommandBase.cs" />
     <Compile Include="Commands\UpdateCommand.cs" />
-    <Compile Include="Extensions\ConnectionExcetions.cs" />
+    <Compile Include="Extensions\ConnectionExtentions.cs" />
     <Compile Include="Filters\FilterComparison.cs" />
     <Compile Include="Filters\FilterComparisonOperatorEnum.cs" />
     <Compile Include="Filters\FilterGroup.cs" />
