--- a/src/Workbooster.ObjectDbMapper/Workbooster.ObjectDbMapper.csproj
+++ b/src/Workbooster.ObjectDbMapper/Workbooster.ObjectDbMapper.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Commands\MappingCommandBase.cs" />
     <Compile Include="Commands\UpdateCommand.cs" />
     <Compile Include="Extensions\ConnectionExtentions.cs" />
+    <Compile Include="Extensions\DatabaseEngineEnum.cs" />
     <Compile Include="Filters\FilterComparison.cs" />
     <Compile Include="Filters\FilterComparisonOperatorEnum.cs" />
     <Compile Include="Filters\FilterGroup.cs" />
