Added an anonymous Record class that can be used to load data without using a typed data class.

--- a/src/Workbooster.ObjectDbMapper.Test/Workbooster.ObjectDbMapper.Test.csproj
+++ b/src/Workbooster.ObjectDbMapper.Test/Workbooster.ObjectDbMapper.Test.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Query_Test\Reading_To_Fields_With_Column_Attributes_Works.cs" />
     <Compile Include="Query_Test\Reading_To_Fields_Works.cs" />
     <Compile Include="Query_Test\Reading_To_Properties_With_Column_Attributes_Works.cs" />
+    <Compile Include="Query_Test\Reading_To_Record_Works.cs" />
     <Compile Include="Query_Test\Reading_With_Parameters_Works.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query_Test\Reading_To_Properties_Works.cs" />
