--- a/src/Workbooster.ObjectDbMapper/Workbooster.ObjectDbMapper.csproj
+++ b/src/Workbooster.ObjectDbMapper/Workbooster.ObjectDbMapper.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Filters\SqlFilterBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query.cs" />
+    <Compile Include="Record.cs" />
     <Compile Include="Reflection\EntityDefinition.cs" />
     <Compile Include="Reflection\FieldDefinition.cs" />
     <Compile Include="Reflection\ReflectionHelper.cs" />
